@@ -28,8 +28,8 @@ Imports:
     tibble,
     ggplot2,
     magrittr,
-    Ternary,
-dnl ggtern,
+dnl    Ternary,
+    ggtern,
     forcats,
 dnl readr,
 dnl    urltools,
